--- a/public/dropout.css
+++ b/public/dropout.css
@@ -27,24 +27,25 @@ ul.options {
 .options li:first-child {
     border-top-left-radius:  0.3em;
     border-top-right-radius: 0.3em;
+    padding-top: 0.3em;
 }
 .options li:last-child {
     border-bottom-left-radius:  0.3em;
     border-bottom-right-radius: 0.3em;
+    padding-bottom: 0.3em;
 }
 .wrapper {
     display: inline-block;
-    border-right: 2px solid gray;
+    border-right: 1px solid gray;
     margin-right: 0.5em;
     padding-right: 0.5em;
 }
 .wrapper button {
-    width:  2em;
-    height: 2em;
+    width:  1.5em;
+    height: 1.5em;
     padding: 0;
     text-align: center;
 }
 .wrapper input[type="text"] {
-    height: 1.9em;
 }
 
