--- a/views/held.jade
+++ b/views/held.jade
@@ -292,6 +292,8 @@ html(lang="de")
 				+KampfTable(Talente.Fernkampf, 'Fernkampf')
 		section.clearfix
 			.vor-nach.fl-links
+				if Talente.Gaben
+					+TalentTable(Talente.Gaben, 'Gaben')
 				+TalentTable(Talente.körperlich, 'Körperliche Talente')
 				+TalentTable(Talente.Gesellschaft, 'Gesellschaftliche Talente')
 				+TalentTable(Talente.Natur, 'Natur-Talente')
