--- a/views/list-helden.jade
+++ b/views/list-helden.jade
@@ -33,4 +33,4 @@ html(lang="de")
 		ul
 			each val in Liste
 				li
-					a(href="/held/" + val._id)= val.Person.Name + " ( " + val.AP.frei + " / " + val.AP.alle + " )"
+					a(href="/held/" + val._id)= val.Person.Name + " ( " + val.AP.frei + " / " + val.AP.alle.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " )"
