Setting up DB for Spells.

--- a/views/system/new-talent.jade
+++ b/views/system/new-talent.jade
@@ -21,7 +21,7 @@ html
 			}
 	body
 		h1 Neues Talent:
-		form(action="/neu", method="post", accept-charset="utf-8")
+		form(action="/talent/neu", method="post", accept-charset="utf-8")
 			div
 				label(for="t_name") Name
 				input#t_name(type="text", name="name", placeholder="Talent-Name", required)
@@ -35,18 +35,18 @@ html
 			div
 				label Probe
 				+Probe3()
-				div
-					label Lernstufe
-					select#stufe(size="1", name="stufe")
-						option A+
-						option A
-						option(selected) B
-						option C
-						option D
-						option E
-						option F
-						option G
-						option H
+			div
+				label Lernstufe
+				select#stufe(size="1", name="stufe")
+					option A+
+					option A
+					option(selected) B
+					option C
+					option D
+					option E
+					option F
+					option G
+					option H
 			div
 				label Standard?
 				input(type="checkbox", name="standard")
