--- a/views/system/table-of-talents.jade
+++ b/views/system/table-of-talents.jade
@@ -34,7 +34,7 @@ html
 			}
 	body
 		section
-			a(href="/neu") neues Talent
+			a(href="/talent/neu") neues Talent
 		section
 			table
 				caption Liste der Talente
