Created display for saved Spells in the DB.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -9,6 +9,6 @@ html(lang="de")
 			li
 				a(href="/talent/neu") Neues Talent
 			li
-				a(href="/zaubersprüche") Übersicht der Zaubersprüche
+				a(href="/zauberliste") Übersicht der Zaubersprüche
 			li
 				a(href="/zauber/neu") Neuer Zauberspruch
