--- a/views/system/new-zauber.jade
+++ b/views/system/new-zauber.jade
@@ -48,7 +48,7 @@ html(lang="de")
 					+Probe3()
 				div
 					label Komplexität
-					select#stufe(size="1", name="stufe")
+					select#stufe(size="1", name="Komplexität")
 						option A
 						option B
 						option C
